--- a/src/app/components/stores/store-personalization/store-personalization.component.html
+++ b/src/app/components/stores/store-personalization/store-personalization.component.html
@@ -194,12 +194,12 @@
                   color: '#fff'
                 }"
               >
-                P
+                
               </div>
               <span
                 class="ml-1 text-[11px] font-semibold"
                 [ngStyle]="{ color: storeForm.value.secondary_color }"
-                >PediApp</span
+                >ShoppiFast</span
               >
             </div>
 
