--- a/src/app/components/auth/signUp-dialog/sign-up-dialog.component.scss
+++ b/src/app/components/auth/signUp-dialog/sign-up-dialog.component.scss
@@ -21,3 +21,13 @@ input.p-inputtext {
     box-shadow: 0 0 0 1px #ec4899;
   }
 }
+
+
+@keyframes fade-in {
+  from { opacity: 0; transform: translate(-50%, -40%); }
+  to { opacity: 1; transform: translate(-50%, -50%); }
+}
+
+.animate-fade-in {
+  animation: fade-in 0.4s ease-out;
+}
