--- a/src/app/components/stores/store-basic-info/store-basic-info.component.html
+++ b/src/app/components/stores/store-basic-info/store-basic-info.component.html
@@ -74,22 +74,25 @@
           </div>
         </div>
 
-        <!-- Rubro -->
-        <div class="flex flex-col">
-          <label class="font-medium">Rubro</label>
-          <small class="text-gray-600"
-            >Seleccioná el rubro al que pertenece tu tienda</small
-          >
-          <p-dropdown
-            [options]="categories"
-            formControlName="rubro"
-            optionLabel="name"
-            [showClear]="true"
-            [filter]="true"
-            placeholder="Seleccioná un rubro"
-            class="w-full"
-          ></p-dropdown>
-        </div>
+  <!-- Rubro -->
+<div class="flex flex-col">
+  <label class="font-medium">Rubros</label>
+  <small class="text-gray-600">
+    Seleccioná uno o varios rubros a los que pertenece tu tienda
+  </small>
+
+  <p-multiSelect
+    [options]="categories"
+    formControlName="rubro"
+    optionLabel="name"
+    display="chip"
+    [filter]="true"
+    [showClear]="true"
+    placeholder="Seleccioná uno o más rubros"
+    class="w-full"
+  ></p-multiSelect>
+</div>
+
 
         <!-- Descripción -->
         <div>
